force-app/main/default/objects/Approval_Object__c/Approval_Object__c.object-meta.xml
<CustomObject>
    <label>Approval Object</label>
    <nameField>
        <displayFormat>AO-{00000}</displayFormat>
        <label>Approval Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>