force-app/main/default/objects/Approval_Object__c/fields/Base_Object__c.field-meta.xml
<CustomField>
    <fullName>Base_Object__c</fullName>
    <externalId>true</externalId>
    <label>Base Object</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>