force-app/main/default/objects/Approval_Object__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>