force-app/main/default/objects/Approval_Object__c/fields/Master_Detail_Field__c.field-meta.xml
<CustomField>
    <fullName>Master_Detail_Field__c</fullName>
    <label>Master-Detail Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>